--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: lab9
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -34,11 +35,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  firebase_analytics: ^10.7.4
-  firebase_database: ^10.3.8
+  cupertino_icons: ^1.0.8
+  firebase_core: ^3.7.0
+  firebase_auth: ^5.3.1
+  firebase_analytics: ^11.3.4
+  firebase_database: ^11.1.5
+  firebase_auth_web: ^5.13.3
 
 dev_dependencies:
   flutter_test:
